Cloudinary first file

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,4 +1,4 @@
-<div class="banner">
+<div class="banner" style="background-image: url('<%= cloudinary_url("theater_yhghtf.png") %>');">
   <div class="maintext">
     <h1>Save <strong>any kind</strong> of movies!</h1>
   </div>
